# FishCube

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Piece.cpp  Piece.h  Player.cpp  Player.h  README.md  Side.cpp  Side.h  WindowSize.h  main.cpp
include/: Cube.h  Direction.h  Game.h  Menu.h  Player.h  ScoreHandler.h  Side.h  State.h  constants.h
src/: Cube.cpp  Game.cpp  Menu.cpp  Player.cpp  Side.cpp  State.cpp  main.cpp  scoreHandler.cpp
